<resources>
    <string name="app_name">Dark Mode</string>

    <string name="navigation_dark_pro">Dark Pro</string>
    <string name="navigation_dark_mode">Dark Mode</string>
    <string name="navigation_night_screen">Night Screen</string>
    <string name="navigation_wallpaper">Dark Wallpaper</string>
    <string name="notification_toolbar">Notification Toolbar</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="invite">Invite</string>

    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="timing_mode">Auto Timer</string>

    <string name="supported_apps">Apps Support Dark Mode</string>
    <string name="not_installed">App not installed</string>
    <string name="miui_tip">Dark Mode was disabled in MIUI 11, see FAQ - MIUI problem. Explore other awesome features we provide!</string>
    <string name="q_tip">Dark Mode is supported by system since Android 10 (Android Q), you could access "Dark theme" here. Explore other awesome features we provide!</string>

    <string name="showing_ads">Loading Ads...</string>

    <string name="night_screen_on">On</string>
    <string name="night_screen_off">Off</string>

    <string name="night_screen_intensity">Intensity</string>
    <string name="night_screen_screenDim">Screen Dim</string>

    <string name="color_temperature_dark">Dark</string>
    <string name="color_temperature_candlelight">Candlelight</string>
    <string name="color_temperature_dim">Dim</string>
    <string name="color_temperature_starry">Starry</string>
    <string name="color_temperature_forest">Forest</string>

    <string name="overlay_permission_title">We need permission!</string>
    <string name="overlay_permission_message">To use Night Screen, please enable \"Draw over other apps\" permission.</string>
    <string name="error_permission">Your device does not support this feature.</string>

    <string name="wallpaper_setting_progress_dialog_text">Setting wallpaper…</string>
    <string name="wallpaper_toast_set_failed">A problem occurred setting this as your wallpaper, please try again</string>
    <string name="network_error">Network error.</string>
    <string name="wallpaper_network_error_reload">Reload</string>
    <string name="report">Report</string>
    <string name="online_wallpaper_apply_btn">SET AS WALLPAPER</string>
    <string name="online_wallpaper_edit_reset_btn">RESET</string>
    <string name="wallpaper_edit_fixed">Fixed</string>
    <string name="wallpaper_edit_scrollable">Scrollable</string>
    <string name="local_wallpaper_pick_error">The selected picture cannot be set as wallpaper.</string>
    <string name="online_wallpaper_loading">Loading HD wallpaper, please wait.</string>

    <string name="dark_pro">Dark Pro</string>
    <string name="purchase">BUY IT NOW</string>
    <string name="message_welcome_viewpager_item_title_0">Auto Timer</string>
    <string name="message_welcome_viewpager_item_title_1">Quick Toolbar</string>
    <string name="message_welcome_viewpager_item_title_2">Ad-free</string>
    <string name="message_welcome_viewpager_item_body_0">Customize start and end time for Dark Mode and Night Screen</string>
    <string name="message_welcome_viewpager_item_body_1">Control Dark Mode and Night Screen switch in the notification area</string>
    <string name="message_welcome_viewpager_item_body_2">One-time purchase, no ads ever again</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="time_picker_title">Set Time</string>
    <string name="set">Set</string>

    <string name="what_re_the">What\'re the benefits of night screen?</string>
    <string name="night_scree_1">Night Screen could reduce Blue Light by adjusting the screen to natural color. Shifting your screen to night mode can relieve your eyes strain, and your eyes will feel at ease during night reading. Also blue light filter will protect your eyes and help you sleep easily.</string>
    <string name="why_night_s">Why night screen cannot cover notification panel &amp; lock screen?</string>
    <string name="night_scree_2">Android 8.0 and higher have changed notification panel &amp; lock screen function. Night screen cannot cover notification panel &amp; lock screen page on Android 8.0 and highter.</string>
    <string name="what_is_blu">What is blue light?</string>
    <string name="night_scree_3">Blue light from your phone screen is the visible light spectrum (380-550nm) for circadian regulation. It could make your eyes feel tired, make people hard to sleep. The color temperature of blue light is high (over 5000k), and it\'ll keep people sober.</string>

    <string name="instagram" translatable="false">Instagram</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="chrome" translatable="false">Chrome</string>
    <string name="photos" translatable="false">Photos</string>
    <string name="google_pay" translatable="false">Google Pay</string>
    <string name="fitness" translatable="false">Google Fitness</string>
    <string name="pocket_casts" translatable="false">Pocket Casts</string>
    <string name="ms_launcher" translatable="false">Microsoft Launcher</string>

    <string name="read">Read</string>
    <string name="share">Share</string>
    <string name="view_more">View More</string>

    <string name="share_dark_mode">Share Dark Mode</string>
</resources>
