<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faq_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="center"
            android:src="@drawable/arrow_back" />

        <com.newmoon.common.view.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/navigation_night_screen"
            android:textColor="@color/faq_text_color"
            android:textSize="20dp"
            app:typeface="@string/custom_font_regular" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/night_screen_help_top_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:orientation="vertical">

                <com.newmoon.common.view.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/what_re_the"
                    android:textColor="@color/faq_text_color"
                    android:textSize="16dp"
                    app:typeface="@string/custom_font_medium" />

                <com.newmoon.common.view.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/night_scree_1"
                    android:textColor="@color/faq_content_color"
                    android:textSize="14dp"
                    app:typeface="@string/custom_font_regular" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <com.newmoon.common.view.TypefacedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/why_night_s"
                        android:textColor="@color/faq_text_color"
                        android:textSize="16dp"
                        app:typeface="@string/custom_font_medium" />

                    <com.newmoon.common.view.TypefacedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/night_scree_2"
                        android:textColor="@color/faq_content_color"
                        android:textSize="14dp"
                        app:typeface="@string/custom_font_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <com.newmoon.common.view.TypefacedTextView
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/what_is_blu"
                        android:textColor="@color/faq_text_color"
                        android:textSize="16dp"
                        app:typeface="@string/custom_font_medium" />

                    <com.newmoon.common.view.TypefacedTextView
                        android:id="@+id/answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/night_scree_3"
                        android:textColor="@color/faq_content_color"
                        android:textSize="14dp"
                        app:typeface="@string/custom_font_regular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>