<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/drawer_insert_img" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/navigation_item_dark_pro"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/icon_dark_pro" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/navigation_dark_pro"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:id="@+id/navigation_item_dark_pro_new"
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/icon_new"/>
            </RelativeLayout>

            <View
                android:id="@+id/navigation_item_dark_pro_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/navigation_menu_line_color" />

            <RelativeLayout
                android:id="@+id/navigation_item_dark_mode"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/dark_mode_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/navigation_dark_mode"
                    app:typeface="@string/custom_font_regular" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_night_screen"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/night_screen_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/navigation_night_screen"
                    app:typeface="@string/custom_font_regular" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_wallpaper"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/wallpaper_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/navigation_wallpaper"
                    app:typeface="@string/custom_font_regular" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/navigation_menu_line_color" />

            <RelativeLayout
                android:id="@+id/navigation_item_toolbar"
                style="@style/DrawerMenuItem"
                android:clipChildren="false"
                android:paddingEnd="0dp">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    android:layout_height="27dp"
                    app:srcCompat="@drawable/notificationbar_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/notification_toolbar"
                    app:typeface="@string/custom_font_regular" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/toolbar_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:theme="@style/SwitchTheme" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_qa"
                style="@style/DrawerMenuItem"
                android:visibility="visible">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/qa_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/faq"
                    app:typeface="@string/custom_font_regular" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_settings"
                style="@style/DrawerMenuItem"
                android:visibility="visible">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/settings_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/settings"
                    app:typeface="@string/custom_font_regular" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>