<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faq_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="center"
            android:src="@drawable/arrow_back" />

        <com.newmoon.common.view.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/settings"
            android:textColor="@color/faq_text_color"
            android:textSize="20dp"
            app:typeface="@string/custom_font_regular" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/navigation_item_privacy_policy"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/privacy_policy_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/privacy_policy"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_terms_of_service"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/terms_of_service_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/terms_of_service"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_rate"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/rate_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/rate"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_feedback"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/feedback_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/feedback"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/navigation_item_invite"
                style="@style/DrawerMenuItem">

                <ImageView
                    style="@style/DrawerMenuIcon"
                    app:srcCompat="@drawable/invite_icon" />

                <com.newmoon.common.view.TypefacedTextView
                    style="@style/DrawerMenuTitle"
                    android:includeFontPadding="false"
                    android:text="@string/invite"
                    app:typeface="@string/custom_font_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>