<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98000000"
    android:clipChildren="false">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.newmoon.common.view.TypefacedTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:textColor="@color/menu_text_color"
            android:textSize="20sp"
            android:text="@string/time_picker_title"
            app:typeface="@string/custom_font_regular" />

        <LinearLayout
            android:id="@+id/time_picker_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <com.newmoon.dark.view.timepickerview.WheelView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.newmoon.dark.view.timepickerview.WheelView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.newmoon.dark.view.timepickerview.WheelView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.newmoon.dark.view.timepickerview.WheelView
                android:id="@+id/hour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.newmoon.dark.view.timepickerview.WheelView
                android:id="@+id/min"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />
        </LinearLayout>


        <com.newmoon.common.view.TypefacedTextView
            android:id="@+id/cancel_action"
            android:layout_width="102dp"
            android:layout_height="36dp"
            android:layout_below="@+id/time_picker_ll"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/time_picker_cancel_text_color"
            android:textSize="14sp"
            app:typeface="@string/custom_font_regular" />

        <com.newmoon.common.view.TypefacedTextView
            android:id="@+id/set_action"
            android:layout_width="102dp"
            android:layout_height="36dp"
            android:layout_below="@+id/time_picker_ll"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:text="@string/set"
            android:textAllCaps="true"
            android:textColor="@color/time_picker_set_text_color"
            android:textSize="14sp"
            app:typeface="@string/custom_font_regular" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
